2022-07-24  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/wifi.py:

	  - Disable AP interface by default.


2022-07-06  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:
	* conf/clock_sensor_esp32.conf:
	* conf/clock_sensor_esp8266.conf:

	  - Added the following new boolean configuration parameters to
	    enable/disable the display, sensor and LED indicator,
	    respectively:

	    DISPLAY_FLAG_ENABLED
	    SENSOR_FLAG_ENABLED
	    LED_FLAG_ENABLED


2022-01-15  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Wifi connection is now verbose.

	* lib/wifi.py:

	  - Now uses xconfig.

	* lib/sensors/am2320.py:
	* tests/am2320_test.py:

	  - Added driver and test code for AM2320 humidity and temperature
	    sensor.

	* lib/sensors/sht30.py:

	  - Now possible to set to single-shot mode from continuous.

	* lib/sensors/bme280.py:

	  - Re-read chip data after a soft reset.


2022-01-14  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* VERSION:

	  - Updated to v0.0.1.

	* ChangeLog:

	  - Change log started.