@@ -1,0 +1,17 @@
+# sample configuration file for standalone_sensor.py running on ESP8266 
+# with a BMP280 sensor and SHT30
+
+I2C_BUS = 0
+PIN_LED = 2
+PIN_I2C_SDA = 4
+PIN_I2C_SCL = 5
+SENSOR1_I2C_ADDR = 0x76
+SENSOR2_I2C_ADDR = 0x44
+LED_FLAG_ENABLED = True
+LED_FLAG_INVERT = True
+INTERVAL_PROBE = 5
+INTERVAL_TSYNC = 60
+NTP_HOST = 192.168.12.1
+HTTP_PATH = /cgi-bin/weather
+HTTP_PORT = 80
+HTTP_TIMEOUT = 10000
